## Process this file with automake to produce Makefile.in -*-Makefile-*-

EXTRA_DIST = \
alloca.m4 \
backupfile.m4 \
bison.m4 \
chown.m4 \
codeset.m4 \
d-ino.m4 \
dirname.m4 \
dos.m4 \
error.m4 \
exclude.m4 \
fileblocks.m4 \
fnmatch.m4 \
ftruncate.m4 \
getcwd.m4 \
getdate.m4 \
getline.m4 \
getopt.m4 \
gettext.m4 \
glibc21.m4 \
hash.m4 \
human.m4 \
iconv.m4 \
intdiv0.m4 \
intmax_t.m4 \
inttypes_h.m4 \
inttypes.m4 \
inttypes-pri.m4 \
isc-posix.m4 \
lchown.m4 \
lcmessage.m4 \
lib-ld.m4 \
lib-link.m4 \
lib-prefix.m4 \
longlong.m4 \
malloc.m4 \
mbrtowc.m4 \
mbstate_t.m4 \
memset.m4 \
mktime.m4 \
modechange.m4 \
nls.m4 \
onceonly.m4 \
pathmax.m4 \
po.m4 \
progtest.m4 \
quotearg.m4 \
quote.m4 \
realloc.m4 \
rmdir.m4 \
safe-read.m4 \
safe-write.m4 \
save-cwd.m4 \
savedir.m4 \
ssize_t.m4 \
stdbool.m4 \
stdint_h.m4 \
strcase.m4 \
strerror_r.m4 \
strtoimax.m4 \
strtoll.m4 \
strtol.m4 \
strtoull.m4 \
strtoul.m4 \
strtoumax.m4 \
tm_gmtoff.m4 \
uintmax_t.m4 \
ulonglong.m4 \
unlocked-io.m4 \
utimbuf.m4 \
utime.m4 \
utimes.m4 \
xalloc.m4 \
xgetcwd.m4 \
xstrtol.m4 \
xstrtoumax.m4
